# text-minning

./: README.md  pyproject.toml
NLPⅡ_1 クラスタリング/: bow_countVectorizer.py  center_top20.csv  create_bow.py  fortravel_k_means_cosssim.py  fortravel_pca.py  k_means_fortravel.py  pca.py  pca_clusters.py  pca_clusters_kmeans.py  test_score.csv  test_score_labeled.csv  text mining clustering.ipynb  tsukurepo_bow.csv  クラスタリングの基礎.pptx
NLPⅡ_1 クラスタリング/.ipynb_checkpoints/: text mining clustering-checkpoint.ipynb
NLPⅡ_2 混合ガウスクラスタリング/: fortravel_GMM.py  fortravel_token.csv  gaussian_mixture.py  multi_normal_3Dplot.py  normal_sample_GMM.py  normal_sample_GMM_2.py  normal_sample_GMM_contour.py  混合ガウスクラスタリング.pptx
NLPⅡ_3 Unigram Mixture/: Unigram Mixture.pptx  Unigram mixture.ipynb  create_bow.py  em_algorithm.py  fortravel.csv  fortravel_cluster.csv  fortravel_unigram_topics.csv  gibbsLDA.py  mixture_unigram.py  origin_data_filter.csv  stopwords.csv  topc_vectorsVB.csv  topic_model_vb2.py  topic_model_ver5.py  topic_vector.pickle  topic_vectors.csv  vbLDA.py
