[tool.poetry]
name = "text_minning2"
version = "0.1.0"
description = ""
authors = ["Koshishika <sisikou@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
statsmodels = "^0.14.0"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
gensim = "^4.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
